--- a/HandGestureInputControl.html
+++ b/HandGestureInputControl.html
@@ -50,25 +50,21 @@ Attributes:<br>
 &nbsp;&nbsp;&nbsp;&nbsp;gesture&nbsp;(str):&nbsp;The&nbsp;current&nbsp;hand&nbsp;gesture&nbsp;recognized&nbsp;by&nbsp;the&nbsp;system.<br>&nbsp;</tt></td></tr>
 <tr><td>&nbsp;</td>
 <td width="100%">Methods defined here:<br>
-<dl><dt><a name="HandGestureInputControl-__init__"><strong>__init__</strong></a>(self)</dt><dd><tt>Initializes&nbsp;the&nbsp;<a href="#HandGestureInputControl">HandGestureInputControl</a>&nbsp;class&nbsp;with&nbsp;default&nbsp;gesture.</tt></dd></dl>
+<dl><dt><a name="HandGestureInputControl-__init__"><strong>__init__</strong></a>(self)</dt><dd><tt>Purpose:&nbsp;Initializes&nbsp;the&nbsp;<a href="#HandGestureInputControl">HandGestureInputControl</a>&nbsp;class&nbsp;with&nbsp;default&nbsp;gesture.<br>
+Post-conditions:&nbsp;The&nbsp;<a href="#HandGestureInputControl">HandGestureInputControl</a>&nbsp;<a href="builtins.html#object">object</a>&nbsp;is&nbsp;created&nbsp;with&nbsp;the&nbsp;default&nbsp;gesture.</tt></dd></dl>
 
-<dl><dt><a name="HandGestureInputControl-captureGesture"><strong>captureGesture</strong></a>(self)</dt><dd><tt>Captures&nbsp;and&nbsp;updates&nbsp;the&nbsp;current&nbsp;hand&nbsp;gesture.<br>
-&nbsp;<br>
-This&nbsp;method&nbsp;should&nbsp;be&nbsp;implemented&nbsp;to&nbsp;capture&nbsp;hand&nbsp;gestures&nbsp;from&nbsp;the&nbsp;camera&nbsp;or&nbsp;sensor&nbsp;input,<br>
-and&nbsp;update&nbsp;the&nbsp;`self.<strong>gesture</strong>`&nbsp;attribute&nbsp;accordingly.</tt></dd></dl>
+<dl><dt><a name="HandGestureInputControl-captureGesture"><strong>captureGesture</strong></a>(self)</dt><dd><tt>Purpose:&nbsp;Captures&nbsp;and&nbsp;updates&nbsp;the&nbsp;current&nbsp;hand&nbsp;gesture.<br>
+Post-conditions:&nbsp;The&nbsp;current&nbsp;hand&nbsp;gesture&nbsp;is&nbsp;updated.</tt></dd></dl>
 
-<dl><dt><a name="HandGestureInputControl-mapGestureToAction"><strong>mapGestureToAction</strong></a>(self, gesture: str)</dt><dd><tt>Maps&nbsp;the&nbsp;captured&nbsp;hand&nbsp;gesture&nbsp;to&nbsp;a&nbsp;specific&nbsp;game&nbsp;action.<br>
-&nbsp;<br>
-Args:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;gesture&nbsp;(str):&nbsp;The&nbsp;hand&nbsp;gesture&nbsp;to&nbsp;map&nbsp;to&nbsp;an&nbsp;action.<br>
-&nbsp;<br>
-This&nbsp;method&nbsp;should&nbsp;be&nbsp;implemented&nbsp;to&nbsp;define&nbsp;how&nbsp;different&nbsp;gestures&nbsp;correspond&nbsp;to&nbsp;different&nbsp;actions<br>
-within&nbsp;the&nbsp;game&nbsp;or&nbsp;application.</tt></dd></dl>
+<dl><dt><a name="HandGestureInputControl-mapGestureToAction"><strong>mapGestureToAction</strong></a>(self, gesture: str)</dt><dd><tt>Purpose:&nbsp;Maps&nbsp;the&nbsp;captured&nbsp;hand&nbsp;gesture&nbsp;to&nbsp;a&nbsp;specific&nbsp;game&nbsp;action.<br>
+Pre-conditions:&nbsp;A&nbsp;hand&nbsp;gesture&nbsp;must&nbsp;be&nbsp;captured.<br>
+Post-conditions:&nbsp;The&nbsp;hand&nbsp;gesture&nbsp;is&nbsp;mapped&nbsp;to&nbsp;a&nbsp;game&nbsp;action.<br>
+Parameters:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;gesture&nbsp;(str):&nbsp;The&nbsp;hand&nbsp;gesture&nbsp;to&nbsp;map&nbsp;to&nbsp;an&nbsp;action.</tt></dd></dl>
 
-<dl><dt><a name="HandGestureInputControl-performClickAction"><strong>performClickAction</strong></a>(self)</dt><dd><tt>Performs&nbsp;a&nbsp;click&nbsp;action&nbsp;based&nbsp;on&nbsp;the&nbsp;current&nbsp;hand&nbsp;gesture.<br>
-&nbsp;<br>
-This&nbsp;method&nbsp;should&nbsp;be&nbsp;implemented&nbsp;to&nbsp;perform&nbsp;actions,&nbsp;such&nbsp;as&nbsp;simulating&nbsp;a&nbsp;mouse&nbsp;click&nbsp;or&nbsp;pressing&nbsp;a&nbsp;button,<br>
-based&nbsp;on&nbsp;the&nbsp;current&nbsp;gesture,&nbsp;typically&nbsp;after&nbsp;mapping&nbsp;the&nbsp;gesture&nbsp;to&nbsp;a&nbsp;specific&nbsp;command&nbsp;or&nbsp;action.</tt></dd></dl>
+<dl><dt><a name="HandGestureInputControl-performClickAction"><strong>performClickAction</strong></a>(self)</dt><dd><tt>Purpose:&nbsp;Performs&nbsp;a&nbsp;click&nbsp;action&nbsp;based&nbsp;on&nbsp;the&nbsp;current&nbsp;hand&nbsp;gesture.<br>
+Pre-conditions:&nbsp;A&nbsp;hand&nbsp;gesture&nbsp;must&nbsp;be&nbsp;captured&nbsp;and&nbsp;mapped&nbsp;to&nbsp;a&nbsp;game&nbsp;action.<br>
+Post-conditions:&nbsp;The&nbsp;click&nbsp;action&nbsp;is&nbsp;performed&nbsp;based&nbsp;on&nbsp;the&nbsp;current&nbsp;hand&nbsp;gesture.</tt></dd></dl>
 
 <hr>
 Data descriptors defined here:<br>
