--- a/MiniGameSelectionScreen.html
+++ b/MiniGameSelectionScreen.html
@@ -57,23 +57,19 @@ Args:<br>
 &nbsp;<br>
 This&nbsp;method&nbsp;should&nbsp;be&nbsp;implemented&nbsp;to&nbsp;update&nbsp;the&nbsp;screen&nbsp;with&nbsp;the&nbsp;game&nbsp;options.</tt></dd></dl>
 
-<dl><dt><a name="MiniGameSelectionScreen-exitGame"><strong>exitGame</strong></a>(self)</dt><dd><tt>Exits&nbsp;the&nbsp;currently&nbsp;running&nbsp;mini-game&nbsp;and&nbsp;cleans&nbsp;up&nbsp;resources.<br>
-&nbsp;<br>
-This&nbsp;method&nbsp;should&nbsp;ensure&nbsp;a&nbsp;clean&nbsp;exit&nbsp;from&nbsp;a&nbsp;game,&nbsp;including&nbsp;stopping&nbsp;any&nbsp;game&nbsp;loops&nbsp;and&nbsp;deallocating&nbsp;resources.</tt></dd></dl>
+<dl><dt><a name="MiniGameSelectionScreen-exitGame"><strong>exitGame</strong></a>(self)</dt><dd><tt>Purpose:&nbsp;Exits&nbsp;the&nbsp;currently&nbsp;running&nbsp;mini-game&nbsp;and&nbsp;cleans&nbsp;up&nbsp;resources.<br>
+Pre-conditions:&nbsp;A&nbsp;mini-game&nbsp;must&nbsp;be&nbsp;running.<br>
+Post-conditions:&nbsp;Resources&nbsp;are&nbsp;cleaned&nbsp;up&nbsp;and&nbsp;the&nbsp;mini-game&nbsp;is&nbsp;exited.</tt></dd></dl>
 
-<dl><dt><a name="MiniGameSelectionScreen-handleSelection"><strong>handleSelection</strong></a>(self, selection: str)</dt><dd><tt>Processes&nbsp;the&nbsp;user's&nbsp;selection&nbsp;of&nbsp;a&nbsp;mini-game.<br>
-&nbsp;<br>
-Args:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;selection&nbsp;(str):&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;selected&nbsp;mini-game.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;<br>
-This&nbsp;method&nbsp;should&nbsp;determine&nbsp;what&nbsp;happens&nbsp;when&nbsp;a&nbsp;user&nbsp;selects&nbsp;a&nbsp;game,&nbsp;such&nbsp;as&nbsp;updating&nbsp;the&nbsp;UI&nbsp;or&nbsp;setting&nbsp;up&nbsp;game-specific&nbsp;data.</tt></dd></dl>
+<dl><dt><a name="MiniGameSelectionScreen-handleSelection"><strong>handleSelection</strong></a>(self, selection: str)</dt><dd><tt>Purpose:&nbsp;Processes&nbsp;the&nbsp;user's&nbsp;selection&nbsp;of&nbsp;a&nbsp;mini-game.<br>
+Parameters:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;selection&nbsp;(str):&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;selected&nbsp;mini-game.</tt></dd></dl>
 
-<dl><dt><a name="MiniGameSelectionScreen-startSelectedGame"><strong>startSelectedGame</strong></a>(self, game: str)</dt><dd><tt>Starts&nbsp;the&nbsp;selected&nbsp;mini-game.<br>
-&nbsp;<br>
-Args:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;game&nbsp;(str):&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;game&nbsp;to&nbsp;start.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;<br>
-This&nbsp;method&nbsp;should&nbsp;initialize&nbsp;and&nbsp;launch&nbsp;the&nbsp;selected&nbsp;mini-game.</tt></dd></dl>
+<dl><dt><a name="MiniGameSelectionScreen-startSelectedGame"><strong>startSelectedGame</strong></a>(self, game: str)</dt><dd><tt>Purpose:&nbsp;Starts&nbsp;the&nbsp;selected&nbsp;mini-game.<br>
+Pre-conditions:&nbsp;The&nbsp;game&nbsp;must&nbsp;be&nbsp;selected&nbsp;by&nbsp;the&nbsp;user.<br>
+Post-conditions:&nbsp;The&nbsp;selected&nbsp;mini-game&nbsp;is&nbsp;initialized&nbsp;and&nbsp;launched.<br>
+Parameters:<br>
+&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;game&nbsp;(str):&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;game&nbsp;to&nbsp;start.</tt></dd></dl>
 
 <hr>
 Data descriptors defined here:<br>
