--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         .navbar {
             display: flex;
             justify-content: space-between;
-            background-color: #0070e0;
-            padding: 30px;
+            background-color: #005dbb;
+            padding: 20px;
         }
         .navbar-left, .navbar-right {
             display: flex;
@@ -21,10 +21,9 @@
         .navbar a {
             margin: 0 10px;
             text-decoration: none;
-            color: black;
-        }
-        .navbar a:first-child {
+            color: rgb(255, 255, 255);
             font-weight: bold;
+            font-size: 20px
         }
         .stats {
             margin: 0 10px;
@@ -37,7 +36,7 @@
             <a href="index.html">
                 <img src="Images/Logo.png" alt="Website Logo" style="width:150px; height:50px;">
             </a>
-            <a href="#">Play</a>
+            <a href="play.html">Play</a>
             <a href="#">Leaderboards</a>
             <a href="#">About</a>
             <a href="#">Donate</a>
