--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="#">Donate</a>
         </div>
         <div class="navbar-right">
-            <a href="#">Guest</a>
+            <a href="guest.html">Guest</a>
             <a href="#">Create Account</a>
             <a href="#">Sign In</a>
         </div>
