initalize my elements and comment

--- a/Keyboardval.html
+++ b/Keyboardval.html
@@ -13,6 +13,32 @@
 <script>
 
 
+// initalize 
+
+// this will be changed to the actually database later 
+const database = "Hello World";
+
+
+// use to display database on the website and the input bar
+const paragraphDiv = document.createElement('div');
+const userInput = document.createElement('input');
+
+// attruibes
+
+paragraphDiv.id = 'paragraph';
+userInput.type = 'text';
+userInput.id = 'userInput';
+
+// appeands the elements and add to web and discript 
+
+document.body.appendChild(paragraphDiv);
+document.body.appendChild(userInput);
+
+
+
+
+
+
 
 
 </script>
