creat my logic and val character

--- a/Keyboardval.html
+++ b/Keyboardval.html
@@ -35,6 +35,39 @@ document.body.appendChild(paragraphDiv);
 document.body.appendChild(userInput);
 
 
+  // Set up and allow database discplay 
+  let index = 0;
+  characterValidation();
+
+
+  // validates the Users typed Character
+
+ function characterValidation() {
+
+    // split into array of chars
+    const paragraphText = initialParagraph.split('').map((char, i) => {
+
+    // If the index of the character is less than the current index of the user's input
+    // set as the wrap char as correct 
+      if (i < index) {
+        return `<span class="correct">${char}</span>`;
+
+    // return character wrap 
+      } else if (i === index) {
+        return `<span>${char}</span>`;
+    // return as it is 
+      } else {
+        return char;
+      }
+
+      // join back as a string 
+    }).join('');
+    // set the hmlt to the new contruct phara 
+    paragraphDiv.innerHTML = paragraphText;
+  }
+
+
+
 
 
 
