--- a/Keyboardval.html
+++ b/Keyboardval.html
@@ -42,6 +42,7 @@ document.body.appendChild(userInput);
 
   // validates the Users typed Character
 
+  // logic of function- split into character > map over character > check index vs user input position > join back/ set HTML content 
  function characterValidation() {
 
     // split into array of chars
